--- a/templates/index.html
+++ b/templates/index.html
@@ -17,21 +17,24 @@
     <div id="wrapper">
       <!-- Nav -->
       <nav id="nav">
-        <div class="logo">
-          <img src="static/img/logo.png">
-        </div>
-        <div id="menu">
-          MENU BAR:&nbsp;<a href="/index">HOME PAGE</a>
-          {% if data['current_active_user'] %}
-            <h1><strong>{{ data['current_active_user'] }}</strong> <a href="/account/logout">LOG OUT</a> </h1>
-          {% else %}
-            <p></p><strong><a href="/account/login">Log in</a></strong></p>
-          {% endif %}
-        </div>
+        <ul>
+          <li><img class="image logo" src="static/img/logo2.png" /></li>
+          <li><a href="/index">HOME PAGE</a></li>
+          <li>
+            {% if data['active_user_id'] %}
+              <h1><strong>{{ data['active_user_name'] }}</strong> <a href="/account/logout">LOG OUT</a> </h1>
+            {% else %}
+              <p>
+                <strong><a href="/account/login">Log in</a></strong>
+                <strong><a href="/account/register">Register</a></strong>
+              </p>
+            {% endif %}
+          </li>
+        </ul>
       </nav>
       <!-- Header -->
       <header id="header" class="alt">
-        <h1 id="title">Chitter App</h1>
+        <h1 id="title">TwittEX App</h1>
       </header>
       <!-- Main -->
 
